--- a/kocom.yaml
+++ b/kocom.yaml
@@ -90,19 +90,21 @@ light:
       mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
     state_on: { offset: 8, data: [0xff] }
     state_off: { offset: 8, data: [0x00] }
-    # 명령 전송을 uartex가 아닌 '액션'에서 강제 수행
     on_turn_on:
       then:
         - lambda: |-
             uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0xFF : 0x00;
             uint8_t cs = (l2 == 0xFF) ? 0xFA : 0xFB;
-            id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D});
+            // 배열 p를 먼저 정의하고, write_array(배열명, 길이) 형식으로 전송
+            uint8_t p[22] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            id(uart_bus).write_array(p, 22);
     on_turn_off:
       then:
         - lambda: |-
             uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0xFF : 0x00;
             uint8_t cs = (l2 == 0xFF) ? 0xFB : 0xFC;
-            id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D});
+            uint8_t p[22] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            id(uart_bus).write_array(p, 22);
 
   # --- 안방 조명 2 ---
   - platform: uartex
@@ -118,13 +120,15 @@ light:
         - lambda: |-
             uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0xFF : 0x00;
             uint8_t cs = (l1 == 0xFF) ? 0xFA : 0xFB;
-            id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D});
+            uint8_t p[22] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            id(uart_bus).write_array(p, 22);
     on_turn_off:
       then:
         - lambda: |-
             uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0xFF : 0x00;
             uint8_t cs = (l1 == 0xFF) ? 0xFB : 0xFC;
-            id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D});
+            uint8_t p[22] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            id(uart_bus).write_array(p, 22);
             
   # 세나방 (Room 2)
   - platform: uartex
