--- a/kocom.yaml
+++ b/kocom.yaml
@@ -81,7 +81,7 @@ logger:
   #AA 55 / 30 BC 00 01 00 0E 01 00 00 00 00 00 00 00 00 00 FC / 0D0D 1번전등 OFF
 
 light:
-  # --- 안방 조명 1 ---
+# --- 안방 조명 1 ---
   - platform: uartex
     name: "Master Room Light 1"
     id: master_room_light_1
@@ -90,21 +90,15 @@ light:
       mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
     state_on: { offset: 8, data: [0xff] }
     state_off: { offset: 8, data: [0x00] }
-    on_turn_on:
-      then:
-        - lambda: |-
-            uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0xFF : 0x00;
-            uint8_t cs = (l2 == 0xFF) ? 0xFA : 0xFB;
-            // 배열 p를 먼저 정의하고, write_array(배열명, 길이) 형식으로 전송
-            uint8_t p[22] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
-            id(uart_bus).write_array(p, 22);
-    on_turn_off:
-      then:
-        - lambda: |-
-            uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0xFF : 0x00;
-            uint8_t cs = (l2 == 0xFF) ? 0xFB : 0xFC;
-            uint8_t p[22] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
-            id(uart_bus).write_array(p, 22);
+    # command_on에서 직접 2번 조명 상태를 체크해서 패킷을 보냅니다.
+    command_on: !lambda |-
+      uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0xFF : 0x00;
+      uint8_t cs = (l2 == 0xFF) ? 0xFA : 0xFB;
+      return {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+    command_off: !lambda |-
+      uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0xFF : 0x00;
+      uint8_t cs = (l2 == 0xFF) ? 0xFB : 0xFC;
+      return {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
 
   # --- 안방 조명 2 ---
   - platform: uartex
@@ -115,20 +109,14 @@ light:
       mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
     state_on: { offset: 9, data: [0xff] }
     state_off: { offset: 9, data: [0x00] }
-    on_turn_on:
-      then:
-        - lambda: |-
-            uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0xFF : 0x00;
-            uint8_t cs = (l1 == 0xFF) ? 0xFA : 0xFB;
-            uint8_t p[22] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
-            id(uart_bus).write_array(p, 22);
-    on_turn_off:
-      then:
-        - lambda: |-
-            uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0xFF : 0x00;
-            uint8_t cs = (l1 == 0xFF) ? 0xFB : 0xFC;
-            uint8_t p[22] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
-            id(uart_bus).write_array(p, 22);
+    command_on: !lambda |-
+      uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0xFF : 0x00;
+      uint8_t cs = (l1 == 0xFF) ? 0xFA : 0xFB;
+      return {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+    command_off: !lambda |-
+      uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0xFF : 0x00;
+      uint8_t cs = (l1 == 0xFF) ? 0xFB : 0xFC;
+      return {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
             
   # 세나방 (Room 2)
   - platform: uartex
