--- a/kocom.yaml
+++ b/kocom.yaml
@@ -79,8 +79,6 @@ logger:
   #AA 55 / 30 BC 00 01 00 0E 01 00 FF 00 00 00 00 00 00 00 FB / 0D0D 2번전등 OFF
   #AA 55 / 30 BC 00 01 00 0E 01 00 00 00 00 00 00 00 00 00 FC / 0D0D 1번전등 OFF
 
-light:
-# --- 안방 조명 1 ---
 # --- 안방 조명 1 ---
   - platform: uartex
     name: "Master Room Light 1"
@@ -93,14 +91,14 @@ light:
     command_on: !lambda |-
       uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0xFF : 0x00;
       uint8_t cs = (l2 == 0xFF) ? 0xFA : 0xFB;
-      // 헤더 AA 55를 제외한 30부터 체크섬까지 18바이트만 리턴 (컴포넌트가 AA 55를 자동으로 붙임)
-      return {0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+      // 헤더(AA 55)와 테일(0D 0D)을 제외한 본체 17바이트만 리턴 -> 총 21바이트 완성
+      return {0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs};
     command_off: !lambda |-
       uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0xFF : 0x00;
       uint8_t cs = (l2 == 0xFF) ? 0xFB : 0xFC;
-      return {0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+      return {0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs};
 
-  # --- 안방 조방 2 ---
+  # --- 안방 조명 2 ---
   - platform: uartex
     name: "Master Room Light 2"
     id: master_room_light_2
@@ -112,11 +110,11 @@ light:
     command_on: !lambda |-
       uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0xFF : 0x00;
       uint8_t cs = (l1 == 0xFF) ? 0xFA : 0xFB;
-      return {0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+      return {0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs};
     command_off: !lambda |-
       uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0xFF : 0x00;
       uint8_t cs = (l1 == 0xFF) ? 0xFB : 0xFC;
-      return {0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+      return {0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs};
             
   # 세나방 (Room 2)
   - platform: uartex
