--- a/kocom.yaml
+++ b/kocom.yaml
@@ -91,12 +91,16 @@ logger:
     command_on: !lambda |-
       uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0xFF : 0x00;
       uint8_t cs = (l2 == 0xFF) ? 0xFA : 0xFB;
-      // 헤더(AA 55)와 테일(0D 0D)을 제외한 본체 17바이트만 리턴 -> 총 21바이트 완성
-      return {0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs};
+      // 정확히 21바이트 배열 선언
+      uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+      id(uart_bus).write_array(p, 21); // 21바이트 강제 전송
+      return {}; // 컴포넌트의 자동 전송은 무시
     command_off: !lambda |-
       uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0xFF : 0x00;
       uint8_t cs = (l2 == 0xFF) ? 0xFB : 0xFC;
-      return {0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs};
+      uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+      id(uart_bus).write_array(p, 21);
+      return {};
 
   # --- 안방 조명 2 ---
   - platform: uartex
@@ -110,11 +114,15 @@ logger:
     command_on: !lambda |-
       uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0xFF : 0x00;
       uint8_t cs = (l1 == 0xFF) ? 0xFA : 0xFB;
-      return {0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs};
+      uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+      id(uart_bus).write_array(p, 21);
+      return {};
     command_off: !lambda |-
       uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0xFF : 0x00;
       uint8_t cs = (l1 == 0xFF) ? 0xFB : 0xFC;
-      return {0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs};
+      uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+      id(uart_bus).write_array(p, 21);
+      return {};
             
   # 세나방 (Room 2)
   - platform: uartex
