--- a/kocom.yaml
+++ b/kocom.yaml
@@ -88,19 +88,24 @@ logger:
       mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
     state_on: { offset: 8, data: [0xff] }
     state_off: { offset: 8, data: [0x00] }
-    command_on: !lambda |-
-      uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0xFF : 0x00;
-      uint8_t cs = (l2 == 0xFF) ? 0xFA : 0xFB;
-      // 정확히 21바이트 배열 선언
-      uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
-      id(uart_bus).write_array(p, 21); // 21바이트 강제 전송
-      return {}; // 컴포넌트의 자동 전송은 무시
-    command_off: !lambda |-
-      uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0xFF : 0x00;
-      uint8_t cs = (l2 == 0xFF) ? 0xFB : 0xFC;
-      uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
-      id(uart_bus).write_array(p, 21);
-      return {};
+    # command_on/off를 비워두어 컴포넌트 자동 발송을 끕니다.
+    command_on: !lambda "return {};"
+    command_off: !lambda "return {};"
+    on_turn_on:
+      then:
+        - lambda: |-
+            uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0xFF : 0x00;
+            uint8_t cs = (l2 == 0xFF) ? 0xFA : 0xFB;
+            // AA 55부터 0D 0D까지 딱 21개만 넣었습니다.
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            id(uart_bus).write_array(p, 21);
+    on_turn_off:
+      then:
+        - lambda: |-
+            uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0xFF : 0x00;
+            uint8_t cs = (l2 == 0xFF) ? 0xFB : 0xFC;
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            id(uart_bus).write_array(p, 21);
 
   # --- 안방 조명 2 ---
   - platform: uartex
@@ -111,18 +116,22 @@ logger:
       mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
     state_on: { offset: 9, data: [0xff] }
     state_off: { offset: 9, data: [0x00] }
-    command_on: !lambda |-
-      uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0xFF : 0x00;
-      uint8_t cs = (l1 == 0xFF) ? 0xFA : 0xFB;
-      uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
-      id(uart_bus).write_array(p, 21);
-      return {};
-    command_off: !lambda |-
-      uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0xFF : 0x00;
-      uint8_t cs = (l1 == 0xFF) ? 0xFB : 0xFC;
-      uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
-      id(uart_bus).write_array(p, 21);
-      return {};
+    command_on: !lambda "return {};"
+    command_off: !lambda "return {};"
+    on_turn_on:
+      then:
+        - lambda: |-
+            uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0xFF : 0x00;
+            uint8_t cs = (l1 == 0xFF) ? 0xFA : 0xFB;
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            id(uart_bus).write_array(p, 21);
+    on_turn_off:
+      then:
+        - lambda: |-
+            uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0xFF : 0x00;
+            uint8_t cs = (l1 == 0xFF) ? 0xFB : 0xFC;
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            id(uart_bus).write_array(p, 21);
             
   # 세나방 (Room 2)
   - platform: uartex
