--- a/kocom.yaml
+++ b/kocom.yaml
@@ -57,6 +57,7 @@ logger:
   logs:
     uart_debug: DEBUG
     uartex: DEBUG
+light:
   # 안방 조명 1 (Room 1)
   #1번 전등 ON, 2번전등 OFF
   #AA 55 / 30 BC 00 01 00 0E 01 00 FF 00 00 00 00 00 00 00 FB / 0D0D
@@ -88,11 +89,11 @@ logger:
       mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
     state_on: { offset: 8, data: [0xff] }
     state_off: { offset: 8, data: [0x00] }
-    # 0x0D, 0x0D를 uartex가 붙이게 하고, 본체만 리턴합니다.
+    # AA 55(헤더)와 0D 0D(테일)는 uartex가 붙이게 두고,
+    # 그 사이의 17바이트만 리턴합니다.
     command_on: !lambda |-
       uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0xFF : 0x00;
       uint8_t cs = (l2 == 0xFF) ? 0xFA : 0xFB;
-      // AA 55(2) + 본체(17) + 0D 0D(2) = 21을 맞추기 위해 본체 17바이트만 리턴
       return {0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs};
     command_off: !lambda |-
       uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0xFF : 0x00;
