--- a/kocom.yaml
+++ b/kocom.yaml
@@ -84,39 +84,27 @@ light:
   - platform: uartex
     name: "Master Room Light 1"
     id: master_room_light_1
-    state:
-      data: [0x30, 0xd0, 0x00, 0x0e, 0x01]
-      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
-    state_on: { offset: 8, data: [0xff] }
-    state_off: { offset: 8, data: [0x00] }
-    # AA 55(헤더)와 0D 0D(테일)는 uartex가 붙이게 두고,
-    # 그 사이의 17바이트만 리턴합니다.
+    # ... (state 설정은 동일)
     command_on: !lambda |-
       uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0xFF : 0x00;
-      uint8_t cs = (l2 == 0xFF) ? 0xFA : 0xFB;
-      return {0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs};
+      // cs를 직접 리턴하지 않고, 데이터 본체 16바이트만 넘깁니다. 
+      // 그러면 uartex가 뒤에 자동으로 CS(1바이트) + 0D 0D(2바이트)를 붙여 21을 만듭니다.
+      return {0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00};
     command_off: !lambda |-
       uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0xFF : 0x00;
-      uint8_t cs = (l2 == 0xFF) ? 0xFB : 0xFC;
-      return {0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs};
+      return {0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00};
 
   # --- 안방 조명 2 ---
   - platform: uartex
     name: "Master Room Light 2"
     id: master_room_light_2
-    state:
-      data: [0x30, 0xd0, 0x00, 0x0e, 0x01]
-      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
-    state_on: { offset: 9, data: [0xff] }
-    state_off: { offset: 9, data: [0x00] }
+    # ... (state 설정은 동일)
     command_on: !lambda |-
       uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0xFF : 0x00;
-      uint8_t cs = (l1 == 0xFF) ? 0xFA : 0xFB;
-      return {0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs};
+      return {0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00};
     command_off: !lambda |-
       uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0xFF : 0x00;
-      uint8_t cs = (l1 == 0xFF) ? 0xFB : 0xFC;
-      return {0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs};
+      return {0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00};
             
   # 세나방 (Room 2)
   - platform: uartex
