--- a/kocom.yaml
+++ b/kocom.yaml
@@ -61,6 +61,7 @@ light:
   # 안방 조명 1 (Room 1)
   #1번 전등 ON, 2번전등 OFF
   #AA 55 / 30 BC 00 01 00 0E 01 00 FF 00 00 00 00 00 00 00 FB / 0D0D
+
   #1번 전등 OFF, 2번전등 OFF
   #AA 55 / 30 BC 00 01 00 0E 01 00 00 00 00 00 00 00 00 00 FC / 0D0D
   #1번 전등 OFF, 2번 전등 ON
@@ -84,27 +85,51 @@ light:
   - platform: uartex
     name: "Master Room Light 1"
     id: master_room_light_1
-    # ... (state 설정은 동일)
-    command_on: !lambda |-
-      uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0xFF : 0x00;
-      // cs를 직접 리턴하지 않고, 데이터 본체 16바이트만 넘깁니다. 
-      // 그러면 uartex가 뒤에 자동으로 CS(1바이트) + 0D 0D(2바이트)를 붙여 21을 만듭니다.
-      return {0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00};
-    command_off: !lambda |-
-      uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0xFF : 0x00;
-      return {0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00};
+    state:
+      data: [0x30, 0xd0, 0x00, 0x0e, 0x01]
+      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
+    state_on: { offset: 8, data: [0xff] }
+    state_off: { offset: 8, data: [0x00] }
+    # command를 비워두고 액션에서 직접 UART 버스에 씁니다.
+    on_turn_on:
+      then:
+        - lambda: |-
+            uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0xFF : 0x00;
+            uint8_t cs = (l2 == 0xFF) ? 0xFA : 0xFB; // 직접 계산한 CS
+            // AA 55 포함 총 21바이트를 UART 버스에 직접 출력 (컴포넌트 우회)
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            id(uart_bus).write_array(p, 21);
+    on_turn_off:
+      then:
+        - lambda: |-
+            uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0xFF : 0x00;
+            uint8_t cs = (l2 == 0xFF) ? 0xFB : 0xFC;
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            id(uart_bus).write_array(p, 21);
 
   # --- 안방 조명 2 ---
   - platform: uartex
     name: "Master Room Light 2"
     id: master_room_light_2
-    # ... (state 설정은 동일)
-    command_on: !lambda |-
-      uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0xFF : 0x00;
-      return {0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00};
-    command_off: !lambda |-
-      uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0xFF : 0x00;
-      return {0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00};
+    state:
+      data: [0x30, 0xd0, 0x00, 0x0e, 0x01]
+      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
+    state_on: { offset: 9, data: [0xff] }
+    state_off: { offset: 9, data: [0x00] }
+    on_turn_on:
+      then:
+        - lambda: |-
+            uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0xFF : 0x00;
+            uint8_t cs = (l1 == 0xFF) ? 0xFA : 0xFB;
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            id(uart_bus).write_array(p, 21);
+    on_turn_off:
+      then:
+        - lambda: |-
+            uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0xFF : 0x00;
+            uint8_t cs = (l1 == 0xFF) ? 0xFB : 0xFC;
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            id(uart_bus).write_array(p, 21);
             
   # 세나방 (Room 2)
   - platform: uartex
