--- a/kocom.yaml
+++ b/kocom.yaml
@@ -81,7 +81,8 @@ light:
   #AA 55 / 30 BC 00 01 00 0E 01 00 FF 00 00 00 00 00 00 00 FB / 0D0D 2번전등 OFF
   #AA 55 / 30 BC 00 01 00 0E 01 00 00 00 00 00 00 00 00 00 FC / 0D0D 1번전등 OFF
 
-# --- 안방 조명 1 ---
+light:
+  # --- 안방 조명 1 ---
   - platform: uartex
     name: "Master Room Light 1"
     id: master_room_light_1
@@ -90,21 +91,22 @@ light:
       mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
     state_on: { offset: 8, data: [0xff] }
     state_off: { offset: 8, data: [0x00] }
-    # command를 비워두고 액션에서 직접 UART 버스에 씁니다.
+    # uartex 자체 명령 기능은 사용하지 않음 (길이 오류 방지)
     on_turn_on:
       then:
         - lambda: |-
             uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0xFF : 0x00;
-            uint8_t cs = (l2 == 0xFF) ? 0xFA : 0xFB; // 직접 계산한 CS
-            // AA 55 포함 총 21바이트를 UART 버스에 직접 출력 (컴포넌트 우회)
-            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            // 10번째 바이트가 0x01이므로 CS는 FA (l2가 FF면 F9)
+            uint8_t cs = (l2 == 0xFF) ? 0xF9 : 0xFA;
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x01, 0xFF, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
             id(uart_bus).write_array(p, 21);
     on_turn_off:
       then:
         - lambda: |-
             uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0xFF : 0x00;
-            uint8_t cs = (l2 == 0xFF) ? 0xFB : 0xFC;
-            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            // 모두 꺼질 때 CS는 FB (l2가 FF면 FA)
+            uint8_t cs = (l2 == 0xFF) ? 0xFA : 0xFB;
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x01, 0x00, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
             id(uart_bus).write_array(p, 21);
 
   # --- 안방 조명 2 ---
@@ -120,15 +122,15 @@ light:
       then:
         - lambda: |-
             uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0xFF : 0x00;
-            uint8_t cs = (l1 == 0xFF) ? 0xFA : 0xFB;
-            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            uint8_t cs = (l1 == 0xFF) ? 0xF9 : 0xFA;
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x01, l1, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
             id(uart_bus).write_array(p, 21);
     on_turn_off:
       then:
         - lambda: |-
             uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0xFF : 0x00;
-            uint8_t cs = (l1 == 0xFF) ? 0xFB : 0xFC;
-            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            uint8_t cs = (l1 == 0xFF) ? 0xFA : 0xFB;
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x01, l1, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
             id(uart_bus).write_array(p, 21);
             
   # 세나방 (Room 2)
