--- a/kocom.yaml
+++ b/kocom.yaml
@@ -81,7 +81,7 @@ light:
   #AA 55 / 30 BC 00 01 00 0E 01 00 FF 00 00 00 00 00 00 00 FB / 0D0D 2번전등 OFF
   #AA 55 / 30 BC 00 01 00 0E 01 00 00 00 00 00 00 00 00 00 FC / 0D0D 1번전등 OFF
 
-light:
+
   # --- 안방 조명 1 ---
   - platform: uartex
     name: "Master Room Light 1"
@@ -89,24 +89,23 @@ light:
     state:
       data: [0x30, 0xd0, 0x00, 0x0e, 0x01]
       mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
-    state_on: { offset: 8, data: [0xff] }
-    state_off: { offset: 8, data: [0x00] }
-    # uartex 자체 명령 기능은 사용하지 않음 (길이 오류 방지)
+    # 상태 읽기 위치 수정: 7번째(0x01)가 1번등
+    state_on: { offset: 7, data: [0x01] }
+    state_off: { offset: 7, data: [0x00] }
     on_turn_on:
       then:
         - lambda: |-
-            uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0xFF : 0x00;
-            // 10번째 바이트가 0x01이므로 CS는 FA (l2가 FF면 F9)
-            uint8_t cs = (l2 == 0xFF) ? 0xF9 : 0xFA;
-            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x01, 0xFF, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0x01 : 0x00;
+            // 7번째에 0x01(ON), 8번째에 l2 상태 삽입. 체크섬 FB 유지.
+            uint8_t cs = (l2 == 0x01) ? 0xFA : 0xFB;
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x01, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
             id(uart_bus).write_array(p, 21);
     on_turn_off:
       then:
         - lambda: |-
-            uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0xFF : 0x00;
-            // 모두 꺼질 때 CS는 FB (l2가 FF면 FA)
-            uint8_t cs = (l2 == 0xFF) ? 0xFA : 0xFB;
-            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x01, 0x00, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0x01 : 0x00;
+            uint8_t cs = (l2 == 0x01) ? 0xFB : 0xFC;
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x00, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
             id(uart_bus).write_array(p, 21);
 
   # --- 안방 조명 2 ---
@@ -116,21 +115,22 @@ light:
     state:
       data: [0x30, 0xd0, 0x00, 0x0e, 0x01]
       mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
-    state_on: { offset: 9, data: [0xff] }
-    state_off: { offset: 9, data: [0x00] }
+    # 상태 읽기 위치 수정: 8번째(0x01)가 2번등
+    state_on: { offset: 8, data: [0x01] }
+    state_off: { offset: 8, data: [0x00] }
     on_turn_on:
       then:
         - lambda: |-
-            uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0xFF : 0x00;
-            uint8_t cs = (l1 == 0xFF) ? 0xF9 : 0xFA;
-            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x01, l1, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0x01 : 0x00;
+            uint8_t cs = (l1 == 0x01) ? 0xFA : 0xFB;
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, l1, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
             id(uart_bus).write_array(p, 21);
     on_turn_off:
       then:
         - lambda: |-
-            uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0xFF : 0x00;
-            uint8_t cs = (l1 == 0xFF) ? 0xFA : 0xFB;
-            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x01, l1, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0x01 : 0x00;
+            uint8_t cs = (l1 == 0x01) ? 0xFB : 0xFC;
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, l1, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
             id(uart_bus).write_array(p, 21);
             
   # 세나방 (Room 2)
