--- a/kocom.yaml
+++ b/kocom.yaml
@@ -87,25 +87,25 @@ light:
     name: "Master Room Light 1"
     id: master_room_light_1
     state:
-      data: [0x30, 0xd0, 0x00, 0x0e, 0x01]
-      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
-    # 상태 읽기 위치 수정: 7번째(0x01)가 1번등
-    state_on: { offset: 7, data: [0x01] }
-    state_off: { offset: 7, data: [0x00] }
+      data: [0x30, 0xd0, 0x00] # 상태 매칭 데이터 수정
+      mask: [0xff, 0xf0, 0xff]
+    # RX 패킷 AA 55 30 DC 00 (01) 에서 6번째 바이트가 상태값
+    state_on: { offset: 5, data: [0x01] }
+    state_off: { offset: 5, data: [0x00] }
     on_turn_on:
       then:
         - lambda: |-
             uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0x01 : 0x00;
-            // 7번째에 0x01(ON), 8번째에 l2 상태 삽입. 체크섬 FB 유지.
+            // 6번째(L1), 7번째(L2) 순서로 배치. 합계에 맞춰 CS 계산
             uint8_t cs = (l2 == 0x01) ? 0xFA : 0xFB;
-            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x01, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
             id(uart_bus).write_array(p, 21);
     on_turn_off:
       then:
         - lambda: |-
             uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0x01 : 0x00;
             uint8_t cs = (l2 == 0x01) ? 0xFB : 0xFC;
-            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x00, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x00, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
             id(uart_bus).write_array(p, 21);
 
   # --- 안방 조명 2 ---
@@ -113,24 +113,23 @@ light:
     name: "Master Room Light 2"
     id: master_room_light_2
     state:
-      data: [0x30, 0xd0, 0x00, 0x0e, 0x01]
-      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
-    # 상태 읽기 위치 수정: 8번째(0x01)가 2번등
-    state_on: { offset: 8, data: [0x01] }
-    state_off: { offset: 8, data: [0x00] }
+      data: [0x30, 0xd0, 0x00]
+      mask: [0xff, 0xf0, 0xff]
+    state_on: { offset: 6, data: [0x01] }
+    state_off: { offset: 6, data: [0x00] }
     on_turn_on:
       then:
         - lambda: |-
             uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0x01 : 0x00;
             uint8_t cs = (l1 == 0x01) ? 0xFA : 0xFB;
-            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, l1, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, l1, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
             id(uart_bus).write_array(p, 21);
     on_turn_off:
       then:
         - lambda: |-
             uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0x01 : 0x00;
             uint8_t cs = (l1 == 0x01) ? 0xFB : 0xFC;
-            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, l1, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, l1, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
             id(uart_bus).write_array(p, 21);
             
   # 세나방 (Room 2)
