--- a/kocom.yaml
+++ b/kocom.yaml
@@ -82,30 +82,30 @@ light:
   #AA 55 / 30 BC 00 01 00 0E 01 00 00 00 00 00 00 00 00 00 FC / 0D0D 1번전등 OFF
 
 
- # --- 안방 조명 1 ---
+  # --- 안방 조명 1 ---
   - platform: uartex
     name: "Master Room Light 1"
     id: master_room_light_1
     state:
-      data: [0x30, 0xd0, 0x00]
-      mask: [0xff, 0xf0, 0xff]
-    # 로그상 8번째 바이트(offset 7)가 1번등 상태
-    state_on: { offset: 7, data: [0x01] }
-    state_off: { offset: 7, data: [0x00] }
+      data: [0x30, 0xd0] # 매칭 데이터 최소화 (에러 방지)
+      mask: [0xff, 0xf0]
+    # 로그상 AA 55 30 DC 00 (01) <-- 6번째 바이트가 1번등 상태
+    state_on: { offset: 5, data: [0x01] }
+    state_off: { offset: 5, data: [0x00] }
     on_turn_on:
       then:
         - lambda: |-
             uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0x01 : 0x00;
-            // 1번등 ON을 위해 8번째 바이트에 0x01 삽입
             uint8_t cs = (l2 == 0x01) ? 0xFA : 0xFB;
-            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x01, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            // 6번째 바이트에 0x01(ON) 배치
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
             id(uart_bus).write_array(p, 21);
     on_turn_off:
       then:
         - lambda: |-
             uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0x01 : 0x00;
             uint8_t cs = (l2 == 0x01) ? 0xFB : 0xFC;
-            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x00, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x00, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
             id(uart_bus).write_array(p, 21);
 
   # --- 안방 조명 2 ---
@@ -113,25 +113,25 @@ light:
     name: "Master Room Light 2"
     id: master_room_light_2
     state:
-      data: [0x30, 0xd0, 0x00]
-      mask: [0xff, 0xf0, 0xff]
-    # 로그상 7번째 바이트(offset 6)가 2번등 상태
+      data: [0x30, 0xd0]
+      mask: [0xff, 0xf0]
+    # 로그상 AA 55 30 DC 00 00 (01) <-- 7번째 바이트가 2번등 상태
     state_on: { offset: 6, data: [0x01] }
     state_off: { offset: 6, data: [0x00] }
     on_turn_on:
       then:
         - lambda: |-
             uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0x01 : 0x00;
-            // 2번등 ON을 위해 7번째 바이트에 0x01 삽입
             uint8_t cs = (l1 == 0x01) ? 0xFA : 0xFB;
-            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x01, l1, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            // 7번째 바이트에 0x01(ON) 배치
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, l1, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
             id(uart_bus).write_array(p, 21);
     on_turn_off:
       then:
         - lambda: |-
             uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0x01 : 0x00;
             uint8_t cs = (l1 == 0x01) ? 0xFB : 0xFC;
-            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, l1, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, l1, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
             id(uart_bus).write_array(p, 21);
             
   # 세나방 (Room 2)
