--- a/kocom.yaml
+++ b/kocom.yaml
@@ -82,30 +82,28 @@ light:
   #AA 55 / 30 BC 00 01 00 0E 01 00 00 00 00 00 00 00 00 00 FC / 0D0D 1번전등 OFF
 
 
+
   # --- 안방 조명 1 ---
   - platform: uartex
     name: "Master Room Light 1"
     id: master_room_light_1
     state:
-      data: [0x30, 0xd0] # 매칭 데이터 최소화 (에러 방지)
+      data: [0x30, 0xd0]
       mask: [0xff, 0xf0]
-    # 로그상 AA 55 30 DC 00 (01) <-- 6번째 바이트가 1번등 상태
-    state_on: { offset: 5, data: [0x01] }
-    state_off: { offset: 5, data: [0x00] }
+    # RX 로그상 8번째 바이트(offset 7)가 01이면 조명이 켜진 상태로 판단
+    state_on: { offset: 7, data: [0x01] }
+    state_off: { offset: 7, data: [0x00] }
     on_turn_on:
       then:
         - lambda: |-
-            uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0x01 : 0x00;
-            uint8_t cs = (l2 == 0x01) ? 0xFA : 0xFB;
-            // 6번째 바이트에 0x01(ON) 배치
-            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            // 조명 1번 ON: 6번째 바이트에 0x01. CS는 FB.
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D};
             id(uart_bus).write_array(p, 21);
     on_turn_off:
       then:
         - lambda: |-
-            uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0x01 : 0x00;
-            uint8_t cs = (l2 == 0x01) ? 0xFB : 0xFC;
-            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x00, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            // 조명 1번 OFF: 6번째 바이트 0x00. CS는 FC.
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFC, 0x0D, 0x0D};
             id(uart_bus).write_array(p, 21);
 
   # --- 안방 조명 2 ---
@@ -115,23 +113,19 @@ light:
     state:
       data: [0x30, 0xd0]
       mask: [0xff, 0xf0]
-    # 로그상 AA 55 30 DC 00 00 (01) <-- 7번째 바이트가 2번등 상태
-    state_on: { offset: 6, data: [0x01] }
-    state_off: { offset: 6, data: [0x00] }
+    state_on: { offset: 7, data: [0x01] }
+    state_off: { offset: 7, data: [0x00] }
     on_turn_on:
       then:
         - lambda: |-
-            uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0x01 : 0x00;
-            uint8_t cs = (l1 == 0x01) ? 0xFA : 0xFB;
-            // 7번째 바이트에 0x01(ON) 배치
-            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, l1, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            // 조명 2번 ON: 7번째 바이트에 0x01. CS는 FB.
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x00, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D};
             id(uart_bus).write_array(p, 21);
     on_turn_off:
       then:
         - lambda: |-
-            uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0x01 : 0x00;
-            uint8_t cs = (l1 == 0x01) ? 0xFB : 0xFC;
-            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, l1, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            // 조명 2번 OFF: 7번째 바이트 0x00. CS는 FC.
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFC, 0x0D, 0x0D};
             id(uart_bus).write_array(p, 21);
             
   # 세나방 (Room 2)
