--- a/kocom.yaml
+++ b/kocom.yaml
@@ -83,6 +83,7 @@ light:
 
 
 
+light:
   # --- 안방 조명 1 ---
   - platform: uartex
     name: "Master Room Light 1"
@@ -90,20 +91,23 @@ light:
     state:
       data: [0x30, 0xd0]
       mask: [0xff, 0xf0]
-    # RX 로그상 8번째 바이트(offset 7)가 01이면 조명이 켜진 상태로 판단
+    # 로그 응답(DC)의 8번째 바이트(offset 7)가 01이면 1번등 ON
     state_on: { offset: 7, data: [0x01] }
     state_off: { offset: 7, data: [0x00] }
     on_turn_on:
       then:
         - lambda: |-
-            // 조명 1번 ON: 6번째 바이트에 0x01. CS는 FB.
-            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D};
+            // 8번째 바이트에 0x01 (ON), 9번째에 2번등 상태 유지
+            uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0x01 : 0x00;
+            uint8_t cs = (l2 == 0x01) ? 0xFA : 0xFB;
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x01, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
             id(uart_bus).write_array(p, 21);
     on_turn_off:
       then:
         - lambda: |-
-            // 조명 1번 OFF: 6번째 바이트 0x00. CS는 FC.
-            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFC, 0x0D, 0x0D};
+            uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0x01 : 0x00;
+            uint8_t cs = (l2 == 0x01) ? 0xFB : 0xFC;
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x00, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
             id(uart_bus).write_array(p, 21);
 
   # --- 안방 조명 2 ---
@@ -113,19 +117,22 @@ light:
     state:
       data: [0x30, 0xd0]
       mask: [0xff, 0xf0]
-    state_on: { offset: 7, data: [0x01] }
-    state_off: { offset: 7, data: [0x00] }
+    # 로그 응답(DC)의 9번째 바이트(offset 8)가 01이면 2번등 ON (추정)
+    state_on: { offset: 8, data: [0x01] }
+    state_off: { offset: 8, data: [0x00] }
     on_turn_on:
       then:
         - lambda: |-
-            // 조명 2번 ON: 7번째 바이트에 0x01. CS는 FB.
-            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x00, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D};
+            uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0x01 : 0x00;
+            uint8_t cs = (l1 == 0x01) ? 0xFA : 0xFB;
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, l1, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
             id(uart_bus).write_array(p, 21);
     on_turn_off:
       then:
         - lambda: |-
-            // 조명 2번 OFF: 7번째 바이트 0x00. CS는 FC.
-            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFC, 0x0D, 0x0D};
+            uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0x01 : 0x00;
+            uint8_t cs = (l1 == 0x01) ? 0xFB : 0xFC;
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, l1, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
             id(uart_bus).write_array(p, 21);
             
   # 세나방 (Room 2)
