--- a/kocom.yaml
+++ b/kocom.yaml
@@ -87,16 +87,15 @@ light:
     name: "Master Room Light 1"
     id: master_room_light_1
     state:
-      data: [0x30, 0xd0, 0x00, 0x0e, 0x01]
+      data: [0x30, 0xd0, 0x00, 0x0e, 0x01] # 로그의 DC 패킷 헤더와 일치
       mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
-    # RX 데이터 AA 55 30 DC 00 0E 01 01 00 00 (FF) <-- 11번째 바이트
+    # 실제 스위치 작동 로그: AA 55 30 DC 00 0E 01 01 00 00 (FF) <-- 11번째 바이트
     state_on: { offset: 10, data: [0xff] }
     state_off: { offset: 10, data: [0x00] }
     on_turn_on:
       then:
         - lambda: |-
             uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0xFF : 0x00;
-            // 로그 기반 체크섬: 하나만 ON이면 FB, 둘다 ON이면 FA
             uint8_t cs = (l2 == 0xFF) ? 0xFA : 0xFB;
             uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
             id(uart_bus).write_array(p, 21);
@@ -104,7 +103,6 @@ light:
       then:
         - lambda: |-
             uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0xFF : 0x00;
-            // 로그 기반 체크섬: 둘다 OFF면 FC, 2번만 ON상태면 FB
             uint8_t cs = (l2 == 0xFF) ? 0xFB : 0xFC;
             uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
             id(uart_bus).write_array(p, 21);
@@ -116,7 +114,7 @@ light:
     state:
       data: [0x30, 0xd0, 0x00, 0x0e, 0x01]
       mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
-    # RX 데이터 AA 55 30 DC 00 0E 01 01 00 00 00 (FF) <-- 12번째 바이트
+    # 실제 스위치 작동 로그: AA 55 30 DC 00 0E 01 01 00 00 00 (FF) <-- 12번째 바이트
     state_on: { offset: 11, data: [0xff] }
     state_off: { offset: 11, data: [0x00] }
     on_turn_on:
