--- a/kocom.yaml
+++ b/kocom.yaml
@@ -87,10 +87,8 @@ light:
     name: "Master Room Light 1"
     id: master_room_light_1
     state:
-      # DC 응답의 앞부분 4바이트 매칭 (명확성을 위해 0x01까지 포함 가능)
-      data: [0x30, 0xd0, 0x00, 0x0e]
-      mask: [0xff, 0xff, 0xff, 0xff]
-    # 로그 기준: 11번째 바이트(offset 10)가 FF면 ON
+      data: [0x30, 0xd0, 0x00, 0x0e, 0x01]
+      mask: [0xff, 0xff, 0xff, 0xff, 0xff]
     state_on: { offset: 10, data: [0xff] }
     state_off: { offset: 10, data: [0x00] }
     on_turn_on:
@@ -98,15 +96,15 @@ light:
         - lambda: |-
             uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0xFF : 0x00;
             uint8_t cs = (l2 == 0xFF) ? 0xFA : 0xFB;
-            // 로그와 동일한 21바이트 패킷 생성
-            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            // BC 00 0E 01 01 구조로 조명1(FF), 조명2(l2) 전송
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x0E, 0x01, 0x01, 0x00, 0x00, 0xFF, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
             id(uart_bus).write_array(p, 21);
     on_turn_off:
       then:
         - lambda: |-
             uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0xFF : 0x00;
             uint8_t cs = (l2 == 0xFF) ? 0xFB : 0xFC;
-            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x0E, 0x01, 0x01, 0x00, 0x00, 0x00, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
             id(uart_bus).write_array(p, 21);
 
   # --- 안방 조명 2 ---
@@ -114,9 +112,8 @@ light:
     name: "Master Room Light 2"
     id: master_room_light_2
     state:
-      data: [0x30, 0xd0, 0x00, 0x0e]
-      mask: [0xff, 0xff, 0xff, 0xff]
-    # 로그 기준: 12번째 바이트(offset 11)가 FF면 ON
+      data: [0x30, 0xd0, 0x00, 0x0e, 0x01]
+      mask: [0xff, 0xff, 0xff, 0xff, 0xff]
     state_on: { offset: 11, data: [0xff] }
     state_off: { offset: 11, data: [0x00] }
     on_turn_on:
@@ -124,15 +121,8 @@ light:
         - lambda: |-
             uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0xFF : 0x00;
             uint8_t cs = (l1 == 0xFF) ? 0xFA : 0xFB;
-            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
-            id(uart_bus).write_array(p, 21);
-    on_turn_off:
-      then:
-        - lambda: |-
-            uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0xFF : 0x00;
-            uint8_t cs = (l1 == 0xFF) ? 0xFB : 0xFC;
-            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
-            id(uart_bus).write_array(p, 21);
+            // BC 00 0E 01 01 구조로 조명1(l1), 조명2(FF) 전송
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0
             
   # 세나방 (Room 2)
   - platform: uartex
