--- a/kocom.yaml
+++ b/kocom.yaml
@@ -96,7 +96,6 @@ light:
         - lambda: |-
             uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0xFF : 0x00;
             uint8_t cs = (l2 == 0xFF) ? 0xFA : 0xFB;
-            // BC 00 0E 01 01 구조로 조명1(FF), 조명2(l2) 전송
             uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x0E, 0x01, 0x01, 0x00, 0x00, 0xFF, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
             id(uart_bus).write_array(p, 21);
     on_turn_off:
@@ -121,8 +120,15 @@ light:
         - lambda: |-
             uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0xFF : 0x00;
             uint8_t cs = (l1 == 0xFF) ? 0xFA : 0xFB;
-            // BC 00 0E 01 01 구조로 조명1(l1), 조명2(FF) 전송
-            uint8_t p[21] = {0xAA, 0x55, 0x30, 0
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x0E, 0x01, 0x01, 0x00, 0x00, l1, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            id(uart_bus).write_array(p, 21);
+    on_turn_off:
+      then:
+        - lambda: |-
+            uint8_t l1 = id(master_room_light_1).remote_values.is_on() ? 0xFF : 0x00;
+            uint8_t cs = (l1 == 0xFF) ? 0xFB : 0xFC;
+            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x0E, 0x01, 0x01, 0x00, 0x00, l1, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+            id(uart_bus).write_array(p, 21);
             
   # 세나방 (Room 2)
   - platform: uartex
