--- a/kocom.yaml
+++ b/kocom.yaml
@@ -82,7 +82,7 @@ logger:
   #AA 55 / 30 BC 00 01 00 0E 01 00 00 00 00 00 00 00 00 00 FC / 0D0D 1번전등 OFF
 
 light:
-  # --- 안방 조명 1 ---
+  # --- 안방 조명 1 --- (Room 1)
   - platform: uartex
     name: "Master Room Light 1"
     id: master_room_light_1
@@ -105,6 +105,10 @@ light:
             uint8_t cs = (l2 == 0xFF) ? 0xFB : 0xFC;
             uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x0E, 0x01, 0x01, 0x00, 0x00, 0x00, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
             id(uart_bus).write_array(p, 21);
+    command_update: 
+      data: [0x30, 0xbc, 0x00, 0x0e, 0x01, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+      ack: [0x30, 0xdc]
+    update_interval: 2h
 
   # --- 안방 조명 2 ---
   - platform: uartex
@@ -129,7 +133,11 @@ light:
             uint8_t cs = (l1 == 0xFF) ? 0xFB : 0xFC;
             uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x0E, 0x01, 0x01, 0x00, 0x00, l1, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
             id(uart_bus).write_array(p, 21);
-            
+    command_update: 
+      data: [0x30, 0xbc, 0x00, 0x0e, 0x01, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+      ack: [0x30, 0xdc]
+    update_interval: 2h
+    
   # 세나방 (Room 2)
   - platform: uartex
     name: "Room 2 Light"
