--- a/kocom.yaml
+++ b/kocom.yaml
@@ -81,40 +81,31 @@ logger:
   #AA 55 / 30 BC 00 01 00 0E 01 00 FF 00 00 00 00 00 00 00 FB / 0D0D 2번전등 OFF
   #AA 55 / 30 BC 00 01 00 0E 01 00 00 00 00 00 00 00 00 00 FC / 0D0D 1번전등 OFF
 
-light:
-  # --- 안방 조명 1 ---
+
+    
+  # 세나방 (Room 2)
   - platform: uartex
-    name: "Master Room Light 1"
-    id: master_room_light_1
+    name: "Room 2 Light"
+    id: room_2_light
     state:
-      # DC(응답)와 BC(명령) 패킷을 모두 감지할 수 있도록 mask 조정
-      data: [0x30, 0x00] 
-      mask: [0xff, 0x00] 
-    state_on: { offset: 10, data: [0xff] }
-    state_off: { offset: 10, data: [0x00] }
-    on_turn_on:
-      then:
-        - lambda: |-
-            uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0xFF : 0x00;
-            uint8_t cs = (l2 == 0xFF) ? 0xFA : 0xFB;
-            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x0E, 0x01, 0x01, 0x00, 0x00, 0xFF, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
-            id(uart_bus).write_array(p, 21);
-    on_turn_off:
-      then:
-        - lambda: |-
-            uint8_t l2 = id(master_room_light_2).remote_values.is_on() ? 0xFF : 0x00;
-            uint8_t cs = (l2 == 0xFF) ? 0xFB : 0xFC;
-            uint8_t p[21] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x0E, 0x01, 0x01, 0x00, 0x00, 0x00, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
-            id(uart_bus).write_array(p, 21);
+      data: [0x30, 0xd0, 0x00, 0x0e, 0x02]
+      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
+    state_on:
+      offset: 8
+      data: [0xff]
+    state_off:
+      offset: 8
+      data: [0x00]
+    command_on:
+      data: [0x30, 0xbc, 0x00, 0x0e, 0x02, 0x00, 0x00, 0x00, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+      ack: [0x30, 0xdc]
+    command_off:
+      data: [0x30, 0xbc, 0x00, 0x0e, 0x02, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+      ack: [0x30, 0xdc]
     command_update: 
-      # 월패드에 현재 조명 상태를 물어보는 쿼리 (0x3A는 상태 요청 용도)
-      data: [0x30, 0xBC, 0x00, 0x0E, 0x01, 0x01, 0x00, 0x3A, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xDC]
-    # 2h(2시간)에서 5s(5초)로 변경하여 실시간성을 높임
+      data: [0x30, 0xbc, 0x00, 0x0e, 0x02, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+      ack: [0x30, 0xdc]
     update_interval: 2h
-
-  # --- 안방 조명 2 ---
-
 
  # 사라방 조명 (Room 3)
   - platform: uartex
