--- a/kocom.yaml
+++ b/kocom.yaml
@@ -58,6 +58,14 @@ logger:
     uart_debug: DEBUG
     uartex: DEBUG
 
+esphome:
+  on_boot:
+    priority: -100
+    then:
+      - delay: 5s  # 부팅 후 5초 대기
+      - logger.log: "코콤 시스템 초기화 완료"
+
+
   # 안방 조명 1 (Room 1)
   #1번 전등 ON, 2번전등 OFF
   #AA 55 / 30 BC 00 01 00 0E 01 00 FF 00 00 00 00 00 00 00 FB / 0D0D
@@ -149,7 +157,7 @@ light:
     command_update: 
       data: [0x30, 0xbc, 0x00, 0x0e, 0x02, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
-    update_interval: 2h
+    update_interval: 2h3min
 
  # 사라방 조명 (Room 3)
   - platform: uartex
@@ -173,7 +181,7 @@ light:
     command_update: 
       data: [0x30, 0xbc, 0x00, 0x0e, 0x03, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
-    update_interval: 2h
+    update_interval: 2h6min
 
   # 알파룸 (Room 4)
 # 전등 상태 확인과 제어용 패킷 설명
@@ -243,7 +251,7 @@ light:
     command_update: 
       data: [0x30, 0xbc, 0x00, 0x0e, 0x04, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
-    update_interval: 2h
+    update_interval: 2h9min
 
   # 주방 조명 1
   - platform: uartex
@@ -267,7 +275,7 @@ light:
     command_update: 
       data: [0x30, 0xbc, 0x00, 0x0e, 0x05, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
-    update_interval: 2h
+    update_interval: 2h12min
 
   # 주방 조명 2
   - platform: uartex
@@ -291,7 +299,7 @@ light:
     command_update: 
       data: [0x30, 0xbc, 0x00, 0x0e, 0x05, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
-    update_interval: 2h
+    update_interval: 2h15min
 
   # 주방 조명 3
   - platform: uartex
@@ -315,7 +323,7 @@ light:
     command_update: 
       data: [0x30, 0xbc, 0x00, 0x0e, 0x05, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
-    update_interval: 2h
+    update_interval: 2h18min
     
   # 거실 조명 1 (Room 0 - Living Room Light 1)
   - platform: uartex
@@ -339,7 +347,7 @@ light:
     command_update: 
       data: [0x30, 0xbc, 0x00, 0x0e, 0x00, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
-    update_interval: 2h
+    update_interval: 2h21min
 
   # 거실 조명 2 (Room 0 - Living Room Light 2)
   - platform: uartex
@@ -361,28 +369,6 @@ light:
       uint8_t light1_state = id(living_room_light_1).current_values.is_on() ? 0xff : 0x00;
       return {{0x30, 0xbc, 0x00, 0x0e, 0x00, 0x00, 0x00, 0x00, light1_state, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00},{0x30, 0xdc}};
     # command_update 삭제! (조명 1이 업데이트할 때 같이 업데이트됨)
-
-  # 주방 조명 (Room 6)
-  - platform: uartex
-    name: "Guest Bathroom Light 1"
-    id: guest_bathroom_light_1
-    state:
-      data: [0x30, 0xd0, 0x00, 0x0e, 0x06]
-      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
-    state_on:
-      offset: 8
-      data: [0xff]
-    state_off:
-      offset: 8
-      data: [0x00]
-    command_on:
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x06, 0x00, 0x00, 0x00, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
-    command_off:
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x06, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
-
-
 
 
 
