--- a/kocom.yaml
+++ b/kocom.yaml
@@ -785,7 +785,26 @@ button:
           ack: [0x30, 0xdc]
       - logger.log: "전원 공급선 활성화 (일괄소등 방지 적용)"
 
-
+valve:
+  - platform: uartex
+    name: "Gas Valve"
+    state: 
+      data: [0x30, 0xd0, 0x00, 0x2c, 0x00]
+      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
+    state_open:
+      offset: 7
+      data: [0x01]
+    state_closed:
+      offset: 7
+      data: [0x01]
+      inverted: true
+    command_close:
+      data: [0x30, 0xbc, 0x00, 0x2c, 0x00, 0x01, 0x00, 0x02, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+      ack: [0x30, 0xdc]
+    command_update: 
+      data: [0x30, 0xbc, 0x00, 0x2c, 0x00, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+      ack: [0x30, 0xdc]
+    update_interval: 2h
       
 #sensor:
 #  - platform: uartex
